decreased font size of solved words on small screens

--- a/game/static/style/game.less
+++ b/game/static/style/game.less
@@ -43,11 +43,19 @@
     .letters__item {
         font-size: 48px;
     }
+
+    .solved-words__item {
+        font-size: inherit;
+    }
 }
 
 @media (max-width: 651px) {
     .letters__item {
         font-size: 24px;
+    }
+
+    .solved-words__item {
+        font-size: 18px;
     }
 }
 
